--- a/packages/@buildingai/constants/tsconfig.build.json
+++ b/packages/@buildingai/constants/tsconfig.build.json
@@ -4,6 +4,8 @@
         "composite": true,
         "rootDir": "src",
         "outDir": "dist",
+        "module": "ESNext",
+        "moduleResolution": "Bundler",
         "tsBuildInfoFile": "dist/build.tsbuildinfo"
     },
     "include": ["src/**/*.ts"],
