feat: 添加开发命令以支持 web 和 API 开发

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "build": "cross-env NODE_OPTIONS=--max-old-space-size=5120 turbo run build",
         "build:web": "cd packages/web/buildingai-ui && pnpm run generate",
         "dev": "turbo run dev",
+        "dev:web": "cd packages/web/buildingai-ui && pnpm run dev",
+        "dev:api": "cd packages/api && pnpm run dev",
         "start": "pnpm i && cd packages/cli && pnpm run start",
         "predeploy": "pnpm i && cd packages/cli && pnpm run predeploy",
         "stop": "node packages/cli/bin/cli.js pm2:stop",
